[NANOHUB][#265455][COM_COURSES] fix z-index issue in course outline builder

--- a/plugins/courses/outline/build.css
+++ b/plugins/courses/outline/build.css
@@ -269,7 +269,7 @@
 	position: absolute;
 	right: 153px;
 	top: -50px;
-	z-index: 5;
+	z-index: 6;
 	padding: 12px;
 	border: 4px solid #666;
 	width: 400px;
